Modified files and added images

--- a/twitter_preprocessing.ipynb
+++ b/twitter_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4            17620              4655  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's drop some columns which not be useful to machine learning models\n",
+    "Let's drop some columns which not be useful for machine learning models\n",
     "\n",
     "#### Create Function to Clean Text\n",
     "\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "4  17620    4655  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -366,26 +366,29 @@
      "output_type": "stream",
      "text": [
       "['Check', 'out', 'this', 'cool', 'website', 'https', 'example', 'com']\n",
-      "['Hey', 'username', 'nice', 'to', 'meet', 'you', '']\n",
-      "['Using', 'Python', 'for', 'data', 'analysis', 'is', 'awesome', '']\n"
+      "['Hey', 'username', 'nice', 'to', 'meet', 'you']\n",
+      "['Using', 'Python', 'for', 'data', 'analysis', 'is', 'awesome']\n"
      ]
     }
    ],
    "source": [
+    "# Example\n",
     "sentences = [\"Check out this cool website: https://example.com\",\n",
     "             \"Hey @username, nice to meet you!\",\n",
     "             \"Using #Python for data analysis is awesome!\"]\n",
     "sentences\n",
     "\n",
     "for sentence in sentences:\n",
+    "    # Tokenizing\n",
     "    tokens = re.split('\\W+', sentence)\n",
-    "    # empty = [word for word in tokens if word not in '']\n",
-    "    print(tokens)"
+    "    # removing empty characters\n",
+    "    empty = [word for word in tokens if word not in '']\n",
+    "    print(empty)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -410,18 +413,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another solution if `tweet preprocessor package` not working for you. We can try to implement regex in order to remove `URL`, `mention` and `hashtags`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check out this cool website \n",
+      "hey  nice to meet you\n",
+      "using  for data analysis is awesome\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define regular expressions for URLs, mentions, and hashtags\n",
+    "url_pattern = r'https?://\\S+|www\\.\\S+'\n",
+    "mention_pattern = r'@\\w+'\n",
+    "hashtag_pattern = r'#\\w+'\n",
+    "\n",
+    "# Iterate over each sentence\n",
+    "for sentence in sentences:\n",
+    "    # Remove URLs, mentions, and hashtags using regular expressions\n",
+    "    cleaned_sentence = re.sub(url_pattern, '', sentence)\n",
+    "    cleaned_sentence = re.sub(mention_pattern, '', cleaned_sentence)\n",
+    "    cleaned_sentence = re.sub(hashtag_pattern, '', cleaned_sentence)\n",
+    "\n",
+    "    text = ''.join([word.lower() for word in cleaned_sentence if word not in string.punctuation])\n",
+    "    \n",
+    "    print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize preprocessor options\n",
-    "p.set_options(p.OPT.URL, p.OPT.MENTION, p.OPT.HASHTAG)\n",
+    "# Define regular expressions for URLs, mentions, and hashtags\n",
+    "url_pattern = r'https?://\\S+|www\\.\\S+'\n",
+    "mention_pattern = r'@\\w+'\n",
+    "hashtag_pattern = r'#\\w+'\n",
     "def clean_text(text):\n",
-    "    # Remove URLs, hashtags, and mentions using preprocessor\n",
-    "    cleaned_text = p.clean(text)\n",
+    "    # Remove URLs, hashtags, and mentions using regular expressions\n",
+    "    cleaned_sentence = re.sub(url_pattern, '', text)\n",
+    "    cleaned_sentence = re.sub(mention_pattern, '', cleaned_sentence)\n",
+    "    cleaned_sentence = re.sub(hashtag_pattern, '', cleaned_sentence)\n",
     "    # Remove punctuation and convert to lowercase\n",
-    "    text = ''.join([word.lower() for word in cleaned_text if word not in string.punctuation])\n",
+    "    text = ''.join([word.lower() for word in cleaned_sentence if word not in string.punctuation])\n",
     "    tokens = re.split('\\W+', text)\n",
     "    empty_char = [word for word in tokens if word not in '']\n",
     "    text = [word for word in empty_char if word not in stopwords]\n",
@@ -430,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +576,7 @@
        "4  17620    4655                                      [sisters, doin]  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +750,7 @@
        "[2792 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +819,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,6 +827,16 @@
    "source": [
     "# Sanity Check\n",
     "df[df['clean_text'].apply(len) == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a clean data file\n",
+    "df.to_csv('s3://twitter-airflow-test-bucket/clean_data.csv')"
    ]
   }
  ],
@@ -799,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
