Added some images and modified jupiter notebook

--- a/twitter_preprocessing.ipynb
+++ b/twitter_preprocessing.ipynb
@@ -218,18 +218,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's drop some columns which not be useful for machine learning models\n",
+    "### Data Wrangler\n",
     "\n",
-    "#### Create Function to Clean Text\n",
-    "\n",
+    "Objective:\n",
+    "- Drop Columns\n",
     "- Removing Punctuation\n",
+    "- Removing Stopwords\n",
     "- Tokenizing\n",
-    "- Removing Stopwords"
+    "\n",
+    "Let's drop some columns which not be useful for machine learning models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,9 +324,8 @@
        "4  17620    4655  "
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -334,26 +335,6 @@
     "    'latitude', 'longitude'], axis=1)\n",
     "df.columns = ['author', 'text', 'likes', 'shares']\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string.punctuation"
    ]
   },
   {
@@ -416,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another solution if `tweet preprocessor package` not working for you. We can try to implement regex in order to remove `URL`, `mention` and `hashtags`"
+    "Another solution if `tweet preprocessor package` not working. We can try to implement regex in order to remove `URL`, `mention` and `hashtags`"
    ]
   },
   {
